[package]
name = "ray_marching_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elsa = "1.9.0"
indicatif = "0.17.7"
minifb = "0.25.0"
nalgebra = "0.32.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "0.18"
winit = "0.28"
tween = "2.0.1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "exr"]
